--- a/portadas/latex_paginatitulo_modTFE.tex
+++ b/portadas/latex_paginatitulo_modTFE.tex
@@ -36,8 +36,8 @@
 %\bfseries
 {\Huge
 \textbf{\textit{
-Influencia de las delimitaciones \\[0.2cm]
-de las circunscripciones \\[0.5cm]
+Influencia de los métodos \\[0.2cm]
+de reparto de escaños \\[0.5cm]
 en los resultados electorales
 }}}\\[0.75cm] 
 
