--- a/bib/Mibiblioteca.bib
+++ b/bib/Mibiblioteca.bib
@@ -1,106 +1,3 @@
-# Fichero de bibliografía (escribir en UTF-8)
-@Manual{Luque2017,
-  title = {Escribir un Trabajo Fin de Estudios con R Markdown},
-  author = {Pedro L. Luque-Calvo},
-  year = "2017",
-  howpublished = {Disponible en \url{http://destio.us.es/calvo}}
-}
-
-@Manual{Luque2019,
-  title = {Cómo crear Tablas de información en R Markdown},
-  author = {Pedro L. Luque-Calvo},
-  year = "2019",
-  howpublished = {Disponible en \url{http://destio.us.es/calvo}}
-}
-
-@Manual{R-base,
-  title = {R: A Language and Environment for Statistical
-    Computing},
-  author = {{R Core Team}},
-  organization = {R Foundation for Statistical Computing},
-  address = {Vienna, Austria},
-  year = {2016},
-  url = {https://www.R-project.org/},
-}
-
-
-@book{Wickham2017,
-	Author = {Hadley Wickham and Garrett Grolemund},
-	Edition = {First Edition},
-	Publisher = {O'Reilly},
-	Title = {R for Data Science: Import, Tidy, Transform, Visualize, and Model Data},
-	Year = {2017}
-}
-
-@ARTICLE {Example1999,
-    author  = "Example, The",
-    title   = "This is an exmaple article not cited in the text",
-    journal = "Journal of Examples",
-    year    = "1999",
-    volume  = "4",
-    number  = "2",
-    pages   = "1-9"
-}
-@ARTICLE {Example2000,
-    author  = "Example, Other",
-    title   = "This is another exmaple article not cited in the text",
-    journal = "Journal of Examples",
-    year = "2000",
-    volume  = "7",
-    number  = "1",
-    pages   = "28-32"
-}
-@ARTICLE {Author2016,
-    author  = "Author, The",
-    title   = "This is an example article with a very boring name",
-    journal = "Journal of Examples",
-    year = "2016",
-    volume  = "9",
-    number  = "2",
-    pages   = "67-70"
-}
-@ARTICLE {Blabla2010,
-    author  = "Blabla, Bla",
-    title   = "It is raining outside",
-    journal = "Journal of Examples",
-    year = "2010",
-    volume  = "4",
-    number  = "1",
-    pages   = "90-97"
-}
-@ARTICLE {Author2013,
-    author  = "Author, Another",
-    title   = "Another example article with a title",
-    journal = "Journal of Examples",
-    year = "2013",
-    volume  = "2",
-    number  = "1",
-    pages   = "21-23"
-}
-
-@Misc{Techopedia,
-  title = {"Definition - What does Business Intelligence (BI) mean?"},
-  author = {Techopedia},
-  year = "2017",
-  howpublished = {Disponible en \url{https://www.techopedia.com/definition/345/business-intelligence-bi}}
-}
-
-@Manual{Pentaho2,
-  title = {¿Qué es pentaho?},
-  author = {Gravitar, Información sin límites},
-  year = "2013",
-  howpublished = {Disponible en \url{http://gravitar.biz/pentaho/}, version 1.6.0}
-}
-
-@Manual{RStudio, 
-  title = {RStudio: Integrated Development Environment for R}, 
-  author = {{RStudio Team}}, 
-  organization = {RStudio, Inc.}, 
-  address = {Boston, MA}, 
-  year = {2015}, 
-  url = {http://www.rstudio.com/}
-}
-
 
 @misc{noauthor_inebase/_nodate,
 	title = {{INEbase}/ {Sociedad} / {Procesos} electorales},
@@ -350,7 +247,7 @@
 	title = {Cociente {Hare}},
 	copyright = {Creative Commons Attribution-ShareAlike License},
 	url = {https://es.wikipedia.org/w/index.php?title=Cociente_Hare&oldid=117550637},
-	abstract = {La cuota Hare o cociente Hare es una fórmula utilizada en sistemas de representación proporcional que representa el número de votos requeridos para obtener un escaño. Resulta de dividir el número de votos válidos de unas elecciones entre el número de escaños en juego. Se utiliza en sistemas electorales de voto único transferible o en sistemas de representación proporcional por listas electorales que utilizan el método del resto mayor.[[1]/]
+	abstract = {La cuota Hare o cociente Hare es una fórmula utilizada en sistemas de representación proporcional que representa el número de votos requeridos para obtener un escaño. Resulta de dividir el número de votos válidos de unas elecciones entre el número de escaños en juego. Se utiliza en sistemas electorales de voto único transferible o en sistemas de representación proporcional por listas electorales que utilizan el método del resto mayor.[[1]​/]
 El cociente Hare/Niemeyer, o sistema de proporciones matemáticas, fue desarrollado por el matemático alemán Niemeyer y promovido para un sistema electoral por el jurista inglés Sir Thomas Hare. Se realiza mediante una fórmula modificada.},
 	language = {es},
 	urldate = {2020-03-02},
