--- a/tfe_principal.Rmd
+++ b/tfe_principal.Rmd
@@ -15,15 +15,14 @@ csl: methods-in-ecology-and-evolution.csl      # no numera mejor en las citas
 #csl: acm-sig-proceedings-long-author-list.csl  # numera peor en las citas
 link-citations: yes
 output: 
-  pdf_document:
-    keep_tex: no
-    number_sections: yes
-    citation_package: natbib  # comentado usa: pandoc-citeproc
-    #toc: yes
+  pdf_document: 
+    citation_package: natbib
     fig_caption: yes
-    template: latex/templateMemoriaTFE.tex
     includes:
       before_body: portadas/latex_paginatitulo_modTFE.tex
+    keep_tex: yes
+    number_sections: yes
+    template: latex/templateMemoriaTFE.tex
 #      before_body: portadas/latex_paginatitulo_modTFGE.tex
 #      before_body: portadas/latex_paginatitulo_modTFGM.tex
 #      before_body: portadas/latex_paginatitulo_modTFDGME.tex
@@ -75,13 +74,13 @@ knitr::write_bib(c("knitr","rmarkdown","dplyr","ggplot2","xtable",
 \tableofcontents
 
 
-\cleardoublepage   
-<!--  \clearpage -->
-\section*{Prólogo}
-\addcontentsline{toc}{section}{Prólogo}
+<!-- \cleardoublepage    -->
+<!-- <!--  \clearpage --> -->
+<!-- \section*{Prólogo} -->
+<!-- \addcontentsline{toc}{section}{Prólogo} -->
 
-```{r child = 'prologo.Rmd'}
-```
+<!-- ```{r child = 'prologo.Rmd'} -->
+<!-- ``` -->
 
 
 \cleardoublepage   
@@ -148,11 +147,11 @@ knitr::write_bib(c("knitr","rmarkdown","dplyr","ggplot2","xtable",
 ```{r child = 'capitulo04.Rmd'}
 ```
 
-\FloatBarrier
+<!-- \FloatBarrier -->
 
-<!-- Borrarlo o comentarlo para obtener la versión final: contiene utilidades -->
-```{r child = 'capitulo05.Rmd'}
-```
+<!-- <!-- Borrarlo o comentarlo para obtener la versión final: contiene utilidades --> -->
+<!-- ```{r child = 'capitulo05.Rmd'} -->
+<!-- ``` -->
 
 
 \FloatBarrier
